Thu, 07 Aug 2003 16:32:32 -0700  Evan Martin  <martine@danga.com>

	* Add incr, decr, and delete.
	* Better Python (based on comments from Uriah Welcome).
	* Docs, using epydoc.

Thu, 07 Aug 2003 14:20:27 -0700  Evan Martin  <martine@danga.com>

	* Initial prerelease.
