@@ -1,3 +1,9 @@
+Thu, 10 Aug 2003 12:17:50 -0700  Evan Martin  <martine@danga.com>
+
+	* Slightly more verbose self-test output.
+	* Fix mark_dead() to use proper classname.
+	* Make pooltest.py run from the test directory.
+
 Thu, 07 Aug 2003 16:32:32 -0700  Evan Martin  <martine@danga.com>
 
 	* Add incr, decr, and delete.
